# avventura-testuale

./: .gitignore  CMakeLists.txt  README.md  desktop.ini  main.cpp
avventura-testuale/: CMakeLists.txt  README.md
avventura-testuale/include/: Languages.hpp
docs/: CMakeLists.txt
html/: Functions_8cpp.html  Functions_8hpp.html  Functions_8hpp_source.html  GameState_8cpp.html  GameState_8hpp.html  GameState_8hpp_source.html  Languages_8cpp.html  Languages_8hpp.html  Languages_8hpp_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  group__GameFunctions.html  index.html  main_8cpp.html  menudata.js  modules.html  namespaceFunctions.html  namespaceFunctions_1_1Phase1.html  namespaceGameState.html  namespaceLanguages.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  structBorder-members.html  structBorder.html  structEntry-members.html  structEntry.html  structGameState_1_1Settings-members.html  structGameState_1_1Settings.html  (+2 more)
html/search/: all_1.js  all_10.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  groups_0.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+8 more)
include/: Functions.hpp  GameState.hpp  InputParser.hpp  Languages.hpp
src/: CMakeLists.txt  Functions.cpp  GameState.cpp  InputParser.cpp  Languages.cpp  functions.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
